0.9.0     use url hash to store terminal session
          fix export/import
          Focus/Blur on Window focus/blur
          Allow to change mask char for passwords
          Fix space after complete and in ALT+D
          class .command in div created by echo command, and error class in error function
          Fix ASNI Formatting bug
          Regex as History Filter
          Fix encoding entites
          exec return promise, exec with array of commands
          auto resume/pause if user code return promise
          Mobile (tested on Android)
          functions splitCommand, parseCommand, splitArguments, parseArguments changed to kebab case
          and those functions from now on throw exception with a message to use that other function
0.8.7     Fix processing command function
0.8.6     One space after fully completed command
0.8.5     All regex for formatting case insensitive
0.8.4     Fix redraw lines on import_view, fix calculating rows
0.8.3     Fix completion in nested interpreters, login option in push
          Remove pause/resume from login, Fix parsing RegExes
          Fix display text with more then limit lines in one echo
0.8.2     add Terminal::exception function
0.8.1     Fix login/logout
0.8.0     CTRL+L Clear terminal
          Shift+Enter insert newline
          Remove tabcompletion option (now completion can be true, array or function)
          Add onRPCError and exceptionHandler callbacks
          Interpreter can be an array
          ignoreSystemDescribe option
          Handle invalid JSON-RPC
          CSS style for standalone cmd plugin
          using CSS3 Animation for blinking if supported
          Fix [0m
          Better error handling (all messages are in $.terminal.defaults.strings)
          Named colors for terminal formatting
          expose settings and login function
          more tools in $.terminal
          paste kill text with CTRL+Y
          paste text from selection using middle mouse button