@@ -4,14 +4,16 @@
           Allow to change mask char for passwords
           Fix space after complete and in ALT+D
           class .command in div created by echo command, and error class in error function
+          CSS selection is now one solid color, also support h1..h6 tables and pre tags
           Fix ASNI Formatting bug
           Regex as History Filter
           Fix encoding entites
           exec return promise, exec with array of commands
           auto resume/pause if user code return promise
           Mobile (tested on Android)
-          functions splitCommand, parseCommand, splitArguments, parseArguments changed to kebab case
-          and those functions from now on throw exception with a message to use that other function
+          functions splitCommand, parseCommand, splitArguments, parseArguments changed
+	  to kebab case and those functions from now on throw exception with a message to
+	  use that other function
 0.8.7     Fix processing command function
 0.8.6     One space after fully completed command
 0.8.5     All regex for formatting case insensitive
